Fix author mailto link in UI footer
Signed-off-by: Felix Claessen <30658763+Flix6x@users.noreply.github.com>

--- a/{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/ui/templates/base_{{cookiecutter.module_name}}.html
+++ b/{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/ui/templates/base_{{cookiecutter.module_name}}.html
@@ -1,6 +1,6 @@
 {{ '{% extends "base.html" %}' }}
 
 {{ '{% block copyright_notice %}' }}
-This is a plugin created by <a mailto="{{ cookiecutter.author_email }}">{{ cookiecutter.author_name }}</a>.
+This is a plugin created by <a href="mailto: {{ cookiecutter.author_email }}">{{ cookiecutter.author_name }}</a>.
 <script>var CurrentYear = new Date().getFullYear(); document.write(CurrentYear)</script>.
 {{ '{% endblock copyright_notice %}' }}
